src/FinancialForce Accounting/objects/InquiryTemplate__c.object
<CustomObject>
    <customHelpPage>codahelpinquirytemplate</customHelpPage>
    <description>This object is deprecated.</description>
    <fields>
        <fullName>BaseDate__c</fullName>
        <label>Base Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BasisDate__c</fullName>
        <label>Basis Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Create date</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Register date</fullName>
                </value>
                <value>
                    <fullName>Due date</fullName>
                </value>
                <value>
                    <fullName>Tax point date</fullName>
                </value>
                <value>
                    <fullName>Payment date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ColumnFilterDrill__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Column Filter Drill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dataview__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Dataview</label>
        <referenceTo>DataView__c</referenceTo>
        <relationshipLabel>Inquiry Templates</relationshipLabel>
        <relationshipName>InquiryTemplates</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExcludeDocumentsOnHold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Documents On Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShowDocumentCount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Document Count</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SignFilterCosmetic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore reverse signage on subtotal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SummarizationTemplate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Summarization Template</label>
        <referenceTo>SummarizationTemplate__c</referenceTo>
        <relationshipLabel>Summarization Templates</relationshipLabel>
        <relationshipName>SummarizationTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SummarizeDuplicateRows__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Summarize Duplicate Rows</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TemplateType__c</fullName>
        <defaultValue>&quot;ACTIONVIEW&quot;</defaultValue>
        <label>Template Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>zDeprecated:Inquiry Template</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inquiry Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>